kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-app
  namespace: weather-app
  labels:
    app: weather-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weather-app
  template:
    metadata:
      labels:
        app: weather-app
    spec:
      containers:
      - name: weather-app
        image: minh15988/weather:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "250m" 
            memory: "512Mi"
          limits:
            cpu: "500m"
            memory: "1Gi"
